- reorganized entire project - got vite react project working, after using init hosting with vite as the framework then installed react

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "my-tech-event-aggregator"
-  }
+    "default": "my-tech-event-aggregator",
+    "staging ": "my-tech-event-aggregator"
+  },
+  "targets": {},
+  "etags": {}
 }
