--- a/functions/package.json
+++ b/functions/package.json
@@ -15,26 +15,20 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "eslint-plugin-jsdoc": "^44.2.3",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.4.0",
-    "puppeteer": "^20.2.0"
+    "firebase-functions": "^4.3.1",
+    "luxon": "^3.3.0",
+    "playwright": "^1.33.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
-    "cors": "^2.8.5",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
-    "express": "^4.18.2",
     "firebase-functions-test": "^3.1.0",
-    "mongoose": "^7.1.1",
     "typescript": "^4.9.0"
   },
-  "private": true,
-  "version": "1.0.0",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "private": true
 }
