--- a/package.json
+++ b/package.json
@@ -161,6 +161,8 @@
     "filesize": "^6.4.0",
     "fill-range": "^7.0.1",
     "finalhandler": "^1.2.0",
+    "firebase-admin": "^11.8.0",
+    "firebase-functions": "^4.4.0",
     "firebase-tools": "^12.0.0",
     "fn.name": "^1.1.0",
     "forever-agent": "^0.6.1",
@@ -411,8 +413,8 @@
     "stream-chain": "^2.2.5",
     "stream-json": "^1.7.5",
     "stream-shift": "^1.0.1",
-    "string-width": "^4.2.3",
     "string_decoder": "^1.3.0",
+    "string-width": "^4.2.3",
     "strip-ansi": "^6.0.1",
     "strip-json-comments": "^3.1.1",
     "superstatic": "^9.0.3",
@@ -482,7 +484,6 @@
     "yocto-queue": "^0.1.0",
     "zip-stream": "^4.1.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
