- added playwright scraping code to the functions and created firebase scheduled function exports

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
         "eventbrite",
-        "testid"
+        "eventref",
+        "testid",
+        "textid"
     ],
     // settings.json
     "javascript.format.enable": false,
