--- a/my-react-frontend/package.json
+++ b/my-react-frontend/package.json
@@ -25,6 +25,7 @@
 		"vite": "^4.3.2"
 	},
 	"dependencies": {
+		"firebase": "^9.22.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.11.1"
