- setup firestore using firebase cli - started troubleshooting emulator setup and config - excluded .log files - checked firebase import statements and corrected where necessary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,6 @@
         "typescript",
         "javascriptreact",
         "typescriptreact"
-    ]
+    ],
+    "typescript.tsdk": "node_modules/typescript/lib"
 }
