--- a/functions/package.json
+++ b/functions/package.json
@@ -13,12 +13,12 @@
   "engines": {
     "node": "18"
   },
-  "main": "lib/index.js",
+  "main": "./src/index.ts",
   "dependencies": {
+    "@google-cloud/firestore": "^6.5.0",
     "eslint-plugin-jsdoc": "^44.2.3",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1",
-    "luxon": "^3.3.0",
+    "firebase-functions": "^4.4.0",
     "playwright": "^1.33.0"
   },
   "devDependencies": {
