--- a/functions/package.json
+++ b/functions/package.json
@@ -13,10 +13,8 @@
   "engines": {
     "node": "18"
   },
-  "main": "./src/index.ts",
+  "main": "lib/index.js",
   "dependencies": {
-    "@google-cloud/firestore": "^6.5.0",
-    "eslint-plugin-jsdoc": "^44.2.3",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.4.0",
     "playwright": "^1.33.0"
