--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -6,10 +6,15 @@
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017", 
+    "types": [
+      // ... other types
+      "jest"
+    ]
   },
   "compileOnSave": true,
   "include": [
-    "src"
+    "src",
+    "**/*.spec.ts"
   ]
 }
