--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -6,11 +6,13 @@
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017", 
+    "target": "es2017",
     "types": [
       // ... other types
       "jest"
-    ]
+    ],
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
   },
   "compileOnSave": true,
   "include": [
