--- a/package.json
+++ b/package.json
@@ -484,10 +484,11 @@
     "yocto-queue": "^0.1.0",
     "zip-stream": "^4.1.0"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@playwright/test": "^1.33.0"
+  }
 }
