- moved tests into their own directry

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -9,14 +9,12 @@
     "target": "es2017",
     "types": [
       // ... other types
-      "jest"
+     
     ],
     "resolveJsonModule": true,
     "esModuleInterop": true,
   },
   "compileOnSave": true,
   "include": [
-    "src",
-    "**/*.spec.ts"
-  ]
+    "src"]
 }
