--- a/functions/package.json
+++ b/functions/package.json
@@ -9,7 +9,7 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "test": "jest --reporter spec"
+    "test": "jest spec"
   },
   "engines": {
     "node": "18"
@@ -21,20 +21,15 @@
     "playwright": "^1.33.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.21.5",
     "@firebase/firestore-types": "^2.5.1",
-    "@firebase/rules-unit-testing": "^2.0.7",
-    "@playwright/test": "^1.33.0",
-    "@types/jest": "^29.5.1",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.25.4",
-    "firebase-functions-test": "^3.1.0",
-    "i": "^0.3.7",
-    "jest": "^29.5.0",
-    "npm": "^9.6.6",
-    "ts-jest": "^29.1.0",
+    "eslint-plugin-import": "^2.25.4",    
+    "i": "^0.3.7",    
+    "npm": "^9.6.6",    
     "typescript": "^4.9.0"
   },
   "private": true
