--- a/functions/package.json
+++ b/functions/package.json
@@ -18,18 +18,19 @@
   "dependencies": {
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.4.0",
-    "playwright": "^1.33.0"
+    "playwright": "^1.34.3"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.21.5",
     "@firebase/firestore-types": "^2.5.1",
+    "@playwright/test": "^1.34.3",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.25.4",    
-    "i": "^0.3.7",    
-    "npm": "^9.6.6",    
+    "eslint-plugin-import": "^2.25.4",
+    "i": "^0.3.7",
+    "npm": "^9.6.6",
     "typescript": "^4.9.0"
   },
   "private": true
