- removed staging project, will implement later - changed firestore rules for testing - updated firebase import statement in functions directory - reworked useEffect function in the eventList component

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,6 @@
 {
 	"projects": {
-		"default": "my-tech-event-aggregator",
-		"staging ": "staging-tech-event-aggregator"
+		"default": "my-tech-event-aggregator"
 	},
 	"targets": {},
 	"etags": {}
