--- a/my-react-frontend/package.json
+++ b/my-react-frontend/package.json
@@ -2,7 +2,7 @@
 	"name": "my-react-frontend",
 	"private": true,
 	"version": "0.0.0",
-	"type": "module", 
+	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
@@ -28,6 +28,8 @@
 		"firebase": "^9.22.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.11.1"
+		"react-icons": "^4.9.0",
+		"react-router-dom": "^6.11.2",
+		"recharts": "^2.6.2"
 	}
 }
