--- a/my-react-frontend/package.json
+++ b/my-react-frontend/package.json
@@ -25,6 +25,7 @@
 	},
 	"dependencies": {
 		"firebase": "^9.22.0",
+		"firebase-admin": "^11.9.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.9.0",
