--- a/my-react-frontend/package.json
+++ b/my-react-frontend/package.json
@@ -9,6 +9,7 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
+		"@firebase/app-types": "^0.9.0",
 		"@types/react": "^18.2.6",
 		"@types/react-dom": "^18.2.4",
 		"@typescript-eslint/eslint-plugin": "^5.59.5",
