--- a/functions/package.json
+++ b/functions/package.json
@@ -14,16 +14,16 @@
   "engines": {
     "node": "18"
   },
-  "main": "lib/index.js",
+  "main": "lib/src/index.js",
   "dependencies": {
+    "chrome-aws-lambda": "^10.1.0",
     "firebase-admin": "^11.9.0",
     "firebase-functions": "^4.4.0",
-    "playwright": "^1.34.3"
+    "playwright-core": "1.34.3"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.21.5",
     "@firebase/firestore-types": "^2.5.1",
-    "@playwright/test": "^1.34.3",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
