--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,7 @@
 	"engines": {
 		"node": "18"
 	},
-	"main": "lib/src/index.js",
+	"main": "lib/index.js",
 	"dependencies": {
 		"chrome-aws-lambda": "^10.1.0",
 		"firebase-admin": "^11.9.0",
