--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,8 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run:  cd my-react-frontend/ 
-      - run:  pnpm install
-      - run:  pnpm build
+      - run:  npm ci && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
