--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,14 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run:  cd my-react-frontend/ 
-      - run:  npm ci
-      - run:  npm run build
+      - run: npm ci && npm run build
+        working-directory: ./my-react-frontend
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_MY_TECH_EVENT_AGGREGATOR }}"
           channelId: live
           projectId: my-tech-event-aggregator
-        env:
-          FIREBASE_CLI_EXPERIMENTS: webframeworks
