--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -19,3 +19,5 @@ jobs:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_MY_TECH_EVENT_AGGREGATOR }}"
           channelId: live
           projectId: my-tech-event-aggregator
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
