--- a/package.json
+++ b/package.json
@@ -487,8 +487,5 @@
   "scripts": {},
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@playwright/test": "^1.33.0"
-  }
+  "license": "ISC"
 }
