removed page ends function and added SDK key to gitignore

--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -10,7 +10,8 @@ node_modules/
 
 
 # Sensitive data
-service-account.json
+serviceAccountKey.json
 /test-results/
 /playwright-report/
 /playwright/.cache/
+
