--- a/functions/package.json
+++ b/functions/package.json
@@ -14,11 +14,12 @@
 	"engines": {
 		"node": "18"
 	},
-	"main": "lib/index.js",
+	"main": "lib/src/index.js",
 	"dependencies": {
 		"chrome-aws-lambda": "^10.1.0",
 		"firebase-admin": "^11.9.0",
 		"firebase-functions": "^4.4.0",
+		"playwright-aws-lambda": "^0.10.0",
 		"playwright-core": "1.35.1"
 	},
 	"devDependencies": {
