--- a/my-react-frontend/package.json
+++ b/my-react-frontend/package.json
@@ -25,8 +25,10 @@
 		"vite": "^4.3.2"
 	},
 	"dependencies": {
+		"@types/marked": "^5.0.0",
 		"firebase": "^9.22.0",
 		"firebase-admin": "^11.9.0",
+		"marked": "^5.1.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.9.0",
