--- a/functions/package.json
+++ b/functions/package.json
@@ -19,7 +19,7 @@
 		"chrome-aws-lambda": "^9.1.0",
 		"firebase-admin": "^11.9.0",
 		"firebase-functions": "^4.4.0",
-		"playwright-core": "1.35.1"
+		"playwright-core": "^1.37.1"
 	},
 	"devDependencies": {
 		"@babel/preset-typescript": "^7.21.5",
